Saves ITHIM List as ITHIMList object

--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -355,6 +355,7 @@ p + stat_smooth( method = loess) + theme_bw() + scale_x_continuous(name="Mean No
 
 p + stat_smooth( method = loess) + theme_bw() + scale_x_continuous(name="Mean Non-Travel METs (MET-hrs./week) (Referent Group)") + scale_y_continuous(name="Change in National DALYs (Thousands)") + coord_cartesian(xlim = c(0, upper)) + geom_point()
 
+ITHIMList <- as("ITHIMList", ITHIMList)
 saveRDS(ITHIMList, file = "./data/ITHIMList.by.state.rds")
 
 ```
