--- a/misc/pomodoro.org
+++ b/misc/pomodoro.org
@@ -5,22 +5,24 @@ week)
 * Schedule
 ** Set 1
 *** Pomodoro #1
-
+Wed Jan  4 08:59:55 2017
 *** Pomodoro #2
-
+Wed Jan  4 09:23:14 2017
 *** Pomodoro #3
-
+9:43
 ** Long Break
-
+10:00 - 10:30
+** Meeting
+10:30 - 11:30
 ** Set 2
 *** Pomodoro #4
-
+11:30
 *** Pomodoro #5
-
+11:50
 *** Pomodoro #6
-
+12:10
 ** Long Break
-
+12:15 - 1:00
 ** Set 3
 *** Pomodoro #7
 
@@ -28,21 +30,26 @@ week)
 
 *** Pomodoro #9
 
+
 * Current Pomodoro List
-** Action Items [ ] x 3
+** Create Pomodoro list and Misc [X]
+*** Misc
+**** DONE make data
+**** DONE Run ITHIM.R
+**** TODO Schedule car to Phoenix
+**** DONE Schedule boiler inspection
+**** TODO Schedule flu shot
+**** DONE Clean Wunderlist
+** Action Items [ ] x 2
 *** TODO Read James's Analytica materials
 *** TODO Reach out to Faris, Ali, Yizheng and Liming
 *** TODO ICT Repository
-** Misc [ ]
-*** TODO White Elephant Party
-*** TODO Holiday Block Party
-** Create ITHIM class [ ] x 3
+
+
 * Future Pomodoro List
 ** Error bars to travel estimates [ ] x 3
 ** Make data package
 ** Create Pomodoro List and Set up [ ]
-*** TODO make data
-*** TODO Run ITHIM.R
 ** Misc [ ]
 *** TODO research laptops
 - System76 Lemur, $1,000 i7 dual, 16GB, ($7,500 for the cheap version)
@@ -61,7 +68,9 @@ week)
 *** TODO Travel arrangements from Amsterdam <-> Wijk aan Zee
 
 ** Create a six-month plan for work at GHI [ ]
+
 * Completed Pomodoro List
+** Create ITHIM class [X] x 3?
 ** Figure for Jonathan [X] [X] [X]
 *** DONE Send figures to Vargo
 *** DONE Answer questions from Vargo/Patz
@@ -78,6 +87,8 @@ week)
 *** DONE Put ITHIM (GHI) meetings on calendar
 *** DONE Slack about scheduling ITHIM (All-Team) meeting
 ** Misc
+*** DONE White Elephant Party
+*** DONE Holiday Block Party
 *** DONE Poker Doodle
 *** DONE Investigate pomodoro app on Slack
 *** DONE Reply to Gary Tipler
