Update to tutorial

--- a/misc/pomodoro.org
+++ b/misc/pomodoro.org
@@ -5,60 +5,47 @@ week)
 * Schedule
 ** Set 1
 *** Pomodoro #1
-9:45
+10:02
 *** Pomodoro #2
-10:05
+10:22
 *** Pomodoro #3
-10:25
+10:42
 ** Long Break
-10:40 - 11:00
+11:05 - 11:20
 ** Set 2
 *** Pomodoro #4
-11:00
-*** Pomodoro #5
 11:20
-*** Pomodoro #6
+*** Pomodoro #5
 11:40
+*** Pomodoro #6
+12:00
 ** Long Break
-11:55 - 12:15
+12:10 - 12:40
 ** Set 3
 *** Pomodoro #7
-12:15
+
 *** Pomodoro #8
-12:35
+
 *** Pomodoro #9
-12:55
-~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~
-
-
 * Current Pomodoro List
-** Cambridge Trip [ ]
-*** TODO Reserve bed and breakfast
-*** DONE Email James itinerary
-** Eric Main [ ]
-*** DONE Email about Slack message
-*** TODO Update the tutorial
-** DiCaprio Proposal [ ]
-*** TODO Read
-*** TODO Comment
-** Action Items [ ] x 2
-*** TODO Read James's Analytica materials
-*** TODO Reach out to Faris, Ali, Yizheng and Liming
-*** TODO ICT Repository
-
-~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~
-
-* Future Pomodoro List
-** Create Pomodoro list and Misc [ ]
+** Create Pomodoro list and Misc [X]
 *** Misc
 **** DONE make data
 **** DONE Run ITHIM.R
 **** TODO Schedule car to Phoenix
 **** DONE Clean Wunderlist
+** Eric Main [X] [ ]
+*** TODO Update the tutorial
+** Vargo's new functions [X] [ ]
+** DiCaprio Proposal [ ] x 2
+*** TODO Read
+*** TODO Comment
+** Buy laptop [ ] x 2
+* Future Pomodoro List
+** Action Items [ ] x 2
+*** TODO Read James's Analytica materials
+*** TODO Reach out to Faris, Ali, Yizheng and Liming
+*** TODO ICT Repository
 ** Error bars to travel estimates [ ] x 3
 ** Make data package
 ** Misc [ ]
@@ -66,7 +53,6 @@ week)
 - System76 Lemur, $1,000 i7 dual, 16GB, ($7,500 for the cheap version)
 - 8 GB, i5, 256 GB MacBook $1,599 (2.03 pounds)
 - MacBook Air $1,200, 8 GB, i5,
-
 ** Edit methods paper [ ] x 3
 *** TODO Update methods paper To-Do List
 *** TODO Materials & Methods
@@ -77,14 +63,10 @@ week)
 ** Wijk aan Zee Trip Details [ ]
 *** TODO Book hotel in Wijk aan Zee
 *** TODO Travel arrangements from Amsterdam <-> Wijk aan Zee
-
 ** Create a six-month plan for work at GHI [ ]
-
-~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~
-
 * Completed Pomodoro List
+** Eric Main [ ]
+*** DONE Email about Slack message
 ** Create ITHIM class [X] x 3?
 ** Figure for Jonathan [X] [X] [X]
 *** DONE Send figures to Vargo
@@ -124,6 +106,8 @@ Re: Christmas and Madison Trip
 *** DONE Make files available for Maggie
 Introduction and Discussion
 ** Cambridge Trip Details
+*** DONE Reserve bed and breakfast
+*** DONE Email James itinerary
 *** DONE Book airfare from Amsterdam to London
 *** DONE Reserve tickets
 *** DONE Email Jonathan/Monet to confirm purchase of airfare
