--- a/R/tutorial.Rmd
+++ b/R/tutorial.Rmd
@@ -5,49 +5,47 @@
 ```{r figwidth, eval = TRUE,  warning = FALSE, message = FALSE, echo = FALSE}
 fig.width <- 6
 phi <- (1+sqrt(5))/2 # the golden ratio ;)
+options(repos='http://cran.rstudio.com/')
 ```
 
 First load the package from Github.  To do this you need the package
-devtools.
+_devtools_.
 
 ```{r, libs, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = TRUE}
-options(repos='http://cran.rstudio.com/')
 install.packages("devtools")
+library("devtools")
 ```
 
-Now load the package and install ITHIM.
+Now use _install\_github_ to install _ITHIM_ and be sure to load it with _library_.
 
 ```{r libs2, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = TRUE}
-library("devtools")
 install_github(repo = "syounkin/ITHIM", ref = "devel")
 library("ITHIM")
 ```
 
 ### Step-by-step
 
-Now that ITHIM is installed and loaded the first step is to create the
-baseline model.  To do so, using defaults built into the package, use
+Now that ITHIM is installed and loaded the first step is to create an
+ITHIM object that represents the baseline vision.
+
+To do so we may create the default ITHIM object using _createITHIM_.
 createITHIM as follows.
 
 ```{r create, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = TRUE}
 ITHIM.baseline <- createITHIM()
 ```
 
+An ITHIM object is an R object that conatins, among other things, a
+set of parameters that define the model.  To view these parameters we
+may use _getParameterSet_.
+
 ```{r class, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = TRUE}
-
+getParameterSet(ITHIM.baseline)
 ```
-
-
-
-
 
 There are currently fourteen parameters, many of which are matrices,
 in the model.  (Recall that we are only using the physical activity
 component.)
-
-```{r parameters, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = TRUE}
-names(ITHIM.baseline$parameters)
-```
 
 We have means and mean matrices for walk time, cycle time and
 non-travel-related activity and coefficients of variation for active
@@ -57,11 +55,11 @@ burden estimates and quantiles is the vector of quantiles used for the
 approximation of the PAF integral.
 
 Now to create the scenario we need only change one parameter.
-Parameters may be changed with updateITHIM.  First we change the mean
+Parameters may be changed with _update_.  First we change the mean
 walking time muwt to 120 minutes.
 
 ```{r scenario, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = TRUE}
-ITHIM.scenario <- updateITHIM(ITHIM.baseline, "muwt", 120)
+ITHIM.scenario <- update(ITHIM.baseline, list(muwt =120))
 ```
 Now to run the comparative risk assesment use compareModels.
 ```{r CRA, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = TRUE}
