--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -10,7 +10,7 @@ results, questions, interpreations, notes, etc.-->
 
 ```{r libs, eval = TRUE, echo = FALSE, results = "hide", warning = FALSE, error = FALSE, message = FALSE}
 options(repos='http://cran.rstudio.com/')
-#install.packages(c("knitr","ggplot2","dplyr","openssl","httr", "git2r", "devtools", "roxygen2"))
+install.packages(c("ggplot2","dplyr","openssl","httr", "git2r", "devtools", "roxygen2"))
 library("ggplot2")
 library("devtools")
 library("reshape2")
@@ -20,8 +20,8 @@ library("dplyr")
 
 ```{r loadITHIM, message = FALSE, eval = TRUE, warning = FALSE, error = TRUE, echo = FALSE}
 document("~/ITHIM/")
-install("~/ITHIM/")
-#install_github("syounkin/ITHIM", ref="devel")
+#install("~/ITHIM/")
+install_github("syounkin/ITHIM", ref="devel")
 install_github("smbache/magrittr", ref="master")
 
 library("magrittr")
