--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -21,7 +21,7 @@ library("dplyr")
 ```{r loadITHIM, message = FALSE, eval = TRUE, warning = FALSE, error = TRUE, echo = FALSE}
 document("~/ITHIM/")
 #install("~/ITHIM/")
-install_github("syounkin/ITHIM", ref="devel")
+install_github("syounkin/ITHIM", ref="cambridge")
 install_github("smbache/magrittr", ref="master")
 
 library("magrittr")
