--- a/R/cambridge.Rmd
+++ b/R/cambridge.Rmd
@@ -35,10 +35,10 @@ in 3 files, listed below.
 
 fileNamesList <- list(
     activeTransportTimeFile = "~/GHI/misc/activeTransportTime.csv",
-    roadInjuriesFile = "~/GHI/misc/stata19.csv",
-#    roadInjuriesFile = "~/GHI/misc/roadInjuries.csv",
-    GBDFile = "~/GHI/misc/gbdEngland_20170209.csv"
-#    GBDFile = "~/GHI/misc/gbd.csv"
+#    roadInjuriesFile = "~/GHI/misc/stata19.csv",
+    roadInjuriesFile = "~/GHI/misc/roadInjuries.csv",
+#    GBDFile = "~/GHI/misc/gbdEngland_20170209.csv"
+    GBDFile = "~/GHI/misc/gbd.csv"
 )
 
 ITHIM <- createITHIM(fileNamesList)
